// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToastNotification /> snapshot should match snapshot 1`] = `
<ToastNotification
  content="Example text"
>
  <ModalContainer
    className="md-toast-notification-wrapper"
    isPadded={true}
    round={50}
  >
    <div
      aria-modal={true}
      className="md-toast-notification-wrapper md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-padded={true}
      data-round={50}
      role="dialog"
    >
      <div
        className="md-toast-notification-body"
      >
        <Text
          className="md-toast-notification-content"
          type="body-primary"
        >
          <p
            className="md-text-wrapper md-toast-notification-content"
            data-type="body-primary"
          >
            Example text
          </p>
        </Text>
      </div>
    </div>
  </ModalContainer>
</ToastNotification>
`;

exports[`<ToastNotification /> snapshot should match snapshot with button group 1`] = `
<ToastNotification
  buttonGroup={
    <React.Fragment>
      <ButtonPill
        size={28}
      >
        Button
      </ButtonPill>
      <ButtonPill
        outline={true}
        size={28}
      >
        Button
      </ButtonPill>
    </React.Fragment>
  }
  content="Example text"
>
  <ModalContainer
    className="md-toast-notification-wrapper"
    isPadded={true}
    round={50}
  >
    <div
      aria-modal={true}
      className="md-toast-notification-wrapper md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-padded={true}
      data-round={50}
      role="dialog"
    >
      <div
        className="md-toast-notification-body"
      >
        <Text
          className="md-toast-notification-content"
          type="body-primary"
        >
          <p
            className="md-text-wrapper md-toast-notification-content"
            data-type="body-primary"
          >
            Example text
          </p>
        </Text>
      </div>
      <div
        className="md-toast-notification-button-group"
      >
        <ButtonPill
          size={28}
        >
          <ButtonSimple
            aria-disabled={false}
            className="md-button-pill-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-outline={false}
            data-shallow-disabled={false}
            data-size={28}
          >
            <FocusRing>
              <FocusRing
                focusClass="md-focus-ring-wrapper children"
                focusRingClass="md-focus-ring-wrapper children"
              >
                <button
                  className="md-button-pill-wrapper md-button-simple-wrapper"
                  data-color="primary"
                  data-disabled={false}
                  data-ghost={false}
                  data-grown={false}
                  data-inverted={false}
                  data-outline={false}
                  data-shallow-disabled={false}
                  data-size={28}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="button"
                >
                  <span>
                    Button
                  </span>
                </button>
              </FocusRing>
            </FocusRing>
          </ButtonSimple>
        </ButtonPill>
        <ButtonPill
          outline={true}
          size={28}
        >
          <ButtonSimple
            aria-disabled={false}
            className="md-button-pill-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-outline={true}
            data-shallow-disabled={false}
            data-size={28}
          >
            <FocusRing>
              <FocusRing
                focusClass="md-focus-ring-wrapper children"
                focusRingClass="md-focus-ring-wrapper children"
              >
                <button
                  className="md-button-pill-wrapper md-button-simple-wrapper"
                  data-color="primary"
                  data-disabled={false}
                  data-ghost={false}
                  data-grown={false}
                  data-inverted={false}
                  data-outline={true}
                  data-shallow-disabled={false}
                  data-size={28}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="button"
                >
                  <span>
                    Button
                  </span>
                </button>
              </FocusRing>
            </FocusRing>
          </ButtonSimple>
        </ButtonPill>
      </div>
    </div>
  </ModalContainer>
</ToastNotification>
`;

exports[`<ToastNotification /> snapshot should match snapshot with className 1`] = `
<ToastNotification
  className="example-class"
  content="Example text"
>
  <ModalContainer
    className="example-class md-toast-notification-wrapper"
    isPadded={true}
    round={50}
  >
    <div
      aria-modal={true}
      className="example-class md-toast-notification-wrapper md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-padded={true}
      data-round={50}
      role="dialog"
    >
      <div
        className="md-toast-notification-body"
      >
        <Text
          className="example-class md-toast-notification-content"
          type="body-primary"
        >
          <p
            className="md-text-wrapper example-class md-toast-notification-content"
            data-type="body-primary"
          >
            Example text
          </p>
        </Text>
      </div>
    </div>
  </ModalContainer>
</ToastNotification>
`;

exports[`<ToastNotification /> snapshot should match snapshot with id 1`] = `
<ToastNotification
  content="Example text"
  id="example-id"
>
  <ModalContainer
    className="md-toast-notification-wrapper"
    id="example-id"
    isPadded={true}
    round={50}
  >
    <div
      aria-modal={true}
      className="md-toast-notification-wrapper md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-padded={true}
      data-round={50}
      id="example-id"
      role="dialog"
    >
      <div
        className="md-toast-notification-body"
      >
        <Text
          className="md-toast-notification-content"
          type="body-primary"
        >
          <p
            className="md-text-wrapper md-toast-notification-content"
            data-type="body-primary"
          >
            Example text
          </p>
        </Text>
      </div>
    </div>
  </ModalContainer>
</ToastNotification>
`;

exports[`<ToastNotification /> snapshot should match snapshot with leading visual 1`] = `
<ToastNotification
  content="Example text"
  leadingVisual={
    <Icon
      name="help-circle"
      scale={24}
      weight="bold"
    />
  }
>
  <ModalContainer
    className="md-toast-notification-wrapper"
    isPadded={true}
    round={50}
  >
    <div
      aria-modal={true}
      className="md-toast-notification-wrapper md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-padded={true}
      data-round={50}
      role="dialog"
    >
      <div
        className="md-toast-notification-body"
      >
        <div
          className="md-toast-notification-leading-visual"
        >
          <Icon
            name="help-circle"
            scale={24}
            weight="bold"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={24}
                data-test="help-circle"
                fill="currentColor"
                height="100%"
                style={Object {}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
        <Text
          className="md-toast-notification-content"
          type="body-primary"
        >
          <p
            className="md-text-wrapper md-toast-notification-content"
            data-type="body-primary"
          >
            Example text
          </p>
        </Text>
      </div>
    </div>
  </ModalContainer>
</ToastNotification>
`;

exports[`<ToastNotification /> snapshot should match snapshot with non string content 1`] = `
<ToastNotification
  content={
    <button>
      Example text
    </button>
  }
>
  <ModalContainer
    className="md-toast-notification-wrapper"
    isPadded={true}
    round={50}
  >
    <div
      aria-modal={true}
      className="md-toast-notification-wrapper md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-padded={true}
      data-round={50}
      role="dialog"
    >
      <div
        className="md-toast-notification-body"
      >
        <div
          className="md-toast-notification-content"
        >
          <button>
            Example text
          </button>
        </div>
      </div>
    </div>
  </ModalContainer>
</ToastNotification>
`;

exports[`<ToastNotification /> snapshot should match snapshot with onClose and closeButtonLabel 1`] = `
<ToastNotification
  closeButtonLabel="Close toast"
  content="Example text"
  onClose={[Function]}
>
  <ModalContainer
    className="md-toast-notification-wrapper"
    isPadded={true}
    round={50}
  >
    <div
      aria-modal={true}
      className="md-toast-notification-wrapper md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-padded={true}
      data-round={50}
      role="dialog"
    >
      <div
        className="md-toast-notification-body"
      >
        <Text
          className="md-toast-notification-content"
          type="body-primary"
        >
          <p
            className="md-text-wrapper md-toast-notification-content"
            data-type="body-primary"
          >
            Example text
          </p>
        </Text>
        <div
          className="md-toast-notification-close-button"
        >
          <ButtonCircle
            aria-label="Close toast"
            ghost={true}
            onPress={[Function]}
            size={20}
          >
            <ButtonSimple
              aria-disabled={false}
              aria-label="Close toast"
              className="md-button-circle-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={true}
              data-inverted={false}
              data-multiple-children={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={20}
              onPress={[Function]}
            >
              <FocusRing>
                <FocusRing
                  focusClass="md-focus-ring-wrapper children"
                  focusRingClass="md-focus-ring-wrapper children"
                >
                  <button
                    aria-label="Close toast"
                    className="md-button-circle-wrapper md-button-simple-wrapper"
                    data-color="primary"
                    data-disabled={false}
                    data-ghost={true}
                    data-inverted={false}
                    data-multiple-children={false}
                    data-outline={false}
                    data-shallow-disabled={false}
                    data-size={20}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragStart={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    type="button"
                  >
                    <Icon
                      name="cancel"
                      scale={16}
                      weight="bold"
                    >
                      <div
                        aria-hidden="true"
                        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          className=""
                          data-autoscale={false}
                          data-scale={16}
                          data-test="cancel"
                          fill="currentColor"
                          height="100%"
                          style={Object {}}
                          viewBox="0, 0, 32, 32"
                          width="100%"
                        />
                      </div>
                    </Icon>
                  </button>
                </FocusRing>
              </FocusRing>
            </ButtonSimple>
          </ButtonCircle>
        </div>
      </div>
    </div>
  </ModalContainer>
</ToastNotification>
`;

exports[`<ToastNotification /> snapshot should match snapshot with string content 1`] = `
<ToastNotification
  content="Example text"
>
  <ModalContainer
    className="md-toast-notification-wrapper"
    isPadded={true}
    round={50}
  >
    <div
      aria-modal={true}
      className="md-toast-notification-wrapper md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-padded={true}
      data-round={50}
      role="dialog"
    >
      <div
        className="md-toast-notification-body"
      >
        <Text
          className="md-toast-notification-content"
          type="body-primary"
        >
          <p
            className="md-text-wrapper md-toast-notification-content"
            data-type="body-primary"
          >
            Example text
          </p>
        </Text>
      </div>
    </div>
  </ModalContainer>
</ToastNotification>
`;

exports[`<ToastNotification /> snapshot should match snapshot with style 1`] = `
<ToastNotification
  content="Example text"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ModalContainer
    className="md-toast-notification-wrapper"
    isPadded={true}
    round={50}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <div
      aria-modal={true}
      className="md-toast-notification-wrapper md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-padded={true}
      data-round={50}
      role="dialog"
      style={
        Object {
          "color": "pink",
        }
      }
    >
      <div
        className="md-toast-notification-body"
      >
        <Text
          className="md-toast-notification-content"
          type="body-primary"
        >
          <p
            className="md-text-wrapper md-toast-notification-content"
            data-type="body-primary"
          >
            Example text
          </p>
        </Text>
      </div>
    </div>
  </ModalContainer>
</ToastNotification>
`;
